--- a/Android/scenes/show/src/main/res/values/themes.xml
+++ b/Android/scenes/show/src/main/res/values/themes.xml
@@ -37,7 +37,7 @@
         <item name="enableEdgeToEdge">true</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
-        <item name="behavior_fitToContents">false</item>
+<!--        <item name="behavior_fitToContents">false</item>-->
         <item name="behavior_peekHeight">0dp</item>
     </style>
 
