--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_idle_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_idle_view.xml
@@ -29,6 +29,7 @@
         android:layout_marginStart="73dp"
         android:layout_marginBottom="34dp"
         android:background="@mipmap/ic_diange"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
     </androidx.appcompat.widget.AppCompatImageButton>
