--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_active_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_active_view.xml
@@ -25,7 +25,10 @@
         android:id="@+id/lrcControlView"
         android:layout_width="match_parent"
         android:layout_height="275dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="36dp"
+        android:background="@drawable/bg_music_player_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
