update singBattleGame UI

--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_dialog_choose_song.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_dialog_choose_song.xml
@@ -12,11 +12,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
         android:checkedButton="@id/rBtnChooseSong"
-        app:layout_constraintTop_toBottomOf="@+id/ilGameSong">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatRadioButton
             android:id="@+id/rBtnChooseSong"
@@ -72,7 +72,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/pager"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="420dp"
         android:overScrollMode="never"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,9 +80,12 @@
 
     <include
         android:id="@+id/ilGameSong"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         layout="@layout/ktv_dialog_game_song"
-        app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pager"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
