--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_item_rank_list.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_item_rank_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:background="@mipmap/ktv_game_rank_list_1_background"
     android:gravity="center">
 
