--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_idle_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_idle_view.xml
@@ -21,6 +21,40 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent">
     </androidx.appcompat.widget.AppCompatTextView>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/scoreFailText"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:drawableTop="@mipmap/ktv_game_fail"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="4dp"
+        android:text="0"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="@+id/messageText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/scoreSuccessText"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
+        android:drawableTop="@mipmap/ktv_game_success"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="4dp"
+        android:text="0"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintTop_toTopOf="@+id/messageText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
     
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btChooseSong"
