--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -61,6 +61,7 @@
         android:layout_marginBottom="10dp"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
