--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_item_rank_list.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_item_rank_list.xml
@@ -10,6 +10,8 @@
 
     <TextView
         android:id="@+id/tvTank"
+        android:height="40dp"
+        android:width="40dp"
         android:text="排名"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -17,7 +19,9 @@
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_weight="1"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="20dp"/>
 
     <TextView
         android:id="@+id/tvPlayer"
