--- a/Android/scenes/ktv_singbattle/src/main/res/drawable/ktv_singbattle_btn.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/drawable/ktv_singbattle_btn.xml
@@ -11,6 +11,6 @@
     <!--正常效果-->
     <item
         android:state_pressed="false"
-        android:drawable="@mipmap/ktv_start_grasp_waiting">
+        android:drawable="@mipmap/ktv_start_grasp">
     </item>
 </selector>
