--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_item_rank_list.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_item_rank_list.xml
@@ -4,41 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="40dp"
     android:background="@mipmap/ktv_game_rank_list_1_background"
     android:gravity="center">
 
     <TextView
         android:id="@+id/tvTank"
-        android:height="40dp"
-        android:width="40dp"
         android:text="排名"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_width="0dp"
+        android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginStart="20dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"/>
+
+    <ImageView
+        android:id="@+id/ivHeader"
+        android:layout_marginStart="40dp"
+        android:layout_height="30dp"
+        android:layout_width="30dp"/>
 
     <TextView
         android:id="@+id/tvPlayer"
         android:text="玩家"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:textSize="12sp"
         android:layout_width="0dp"
         android:textColor="@color/white"
-        android:gravity="center"
-        android:layout_weight="2"
+        android:layout_marginStart="10dp"
+        android:layout_weight="1.2"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/tvSongNum"
         android:text="抢唱成功"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:textSize="12sp"
         android:layout_width="0dp"
         android:textColor="@color/white"
         android:gravity="center"
@@ -48,8 +47,7 @@
     <TextView
         android:id="@+id/tvScore"
         android:text="总分"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:textSize="12sp"
         android:textColor="@color/white"
         android:gravity="center"
         android:layout_width="0dp"
