--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_view.xml
@@ -33,16 +33,13 @@
 
         <Button
             android:id="@+id/btGameAgain"
-            android:layout_width="109dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="260dp"
-            android:text="再来一轮"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:background="@mipmap/ktv_start_grasp_waiting"
+            android:layout_width="100dp"
+            android:layout_height="45dp"
+            android:layout_marginTop="270dp"
+            android:background="@mipmap/ktv_game_again"
             android:layout_gravity="center_horizontal"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
     </FrameLayout>
 
