[FEAT] BGM manager and player

--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_bgm_setting.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_bgm_setting.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:theme="@style/Theme.AppCompat"
     android:background="@drawable/voice_bg_rect_top_radius20_white">
 
     <View
@@ -34,7 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivBottomSheetTitle" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcMusicList"
+        android:id="@+id/rvMusicList"
         android:layout_width="wrap_content"
         android:layout_height="387dp"
         app:layout_constraintStart_toStartOf="parent"
